<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/priorities">

    </Spinner>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/todo_edit_summary"
            android:layout_weight="1"
            android:hint="@string/todo_summary"
            android:inputType="text|textMultiLine"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/todo_edit_description"
        android:hint="@string/todo_description"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/todo_edit_button"
        android:layout_gravity="center"
        android:text="@string/todo_edit_confirm"/>

</LinearLayout>